fixed bug and latest code